--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "react-uuid": "^2.0.0",
     "styled-components": "5.3.10"
   },
