--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.7.3",
     "immer": "^10.0.2",
     "phosphor-react": "^1.4.1",
+    "primereact": "^10.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "react-uuid": "^2.0.0",
+    "socket.io-client": "^4.7.5",
     "styled-components": "5.3.10"
   },
   "devDependencies": {
